# winboost

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TODO-HUMAN.md  build.py  build_mcp.py  pyproject.toml  status.yaml
.project/: MASTER-PLAN.md
.project/01-research/: competitors.md  market.md
.project/02-prompts/: phase-11-native-windows-actions.md  phase-12-mcp-standalone.md  phase1-foundation.md  pre-release-smoke-test.md
.project/03-specs/: architecture.md
.project/04-quality/: checklist.md
.project/06-agent-logs/: 2026-05-06-claude-code-audit-organisation.md  2026-05-06-claude-code-decision-skip-v1-release.md  2026-05-06-claude-code-phase-11-kickoff.md  2026-05-06-claude-code-plan-evolution-v2.1-v2.3.md  2026-05-06-claude-code-prep-prompt-smoke-test.md  2026-05-06-claude-code-remediation-bloquants-smoke-test.md  2026-05-06-claude-code-synthese-retroactive-phases-1-10.md  2026-05-06-claude-code-v2.1-batch-network-appearance.md  2026-05-06-claude-code-v2.1-phase-11-complete.md  2026-05-06-claude-code-v2.2-phase-12-complete.md  2026-05-06-claude-code-v2.3-dogfooding-3-options.md  2026-05-06-frontend-developer-diagnose-gui-tab.md  2026-05-06-reality-checker-pre-release-smoke-test-RUN2.md  2026-05-06-reality-checker-pre-release-smoke-test.md  README.md
assets/: generate_icon.py
docs/assets/: .gitkeep  README.md
docs/briefs/: BRIEF-ANTOINE-T075-pricing.md  BRIEF-ENZO-T074-post-HN.md
tests/mcp_compat/: VERDICT.md  __init__.py  build_poc.py  poc_client.py  poc_mcp_server.py
tests/test_actions/: __init__.py  test_loader.py  test_native_actions.py  test_registry_e2e.py  test_schema.py
tests/test_ai/: test_ai_engine.py  test_providers.py
tests/test_cli/: test_chat_json.py  test_main.py
tests/test_core/: test_backup.py  test_base_module.py  test_config.py  test_engine.py  test_executor.py  test_history.py
tests/test_diagnose/: __init__.py  test_runner.py  test_themes.py
tests/test_e2e/: __init__.py  test_cli_e2e.py  test_integration.py  test_v2_e2e.py
tests/test_gui/: test_chat.py  test_diagnose_page.py  test_hotkey_overlay.py  test_phase9.py  test_pilot_history_page.py  test_pilot_page.py  test_settings_pilot_section.py
tests/test_mcp/: test_auth.py  test_install.py  test_integration.py  test_mcp_exe_build.py  test_server.py
tests/test_modules/: test_dev_cache_cleaner.py  test_disk_analyzer.py  test_privacy_cleaner.py  test_ram_optimizer.py  test_service_optimizer.py  test_startup_manager.py  test_system_info.py  test_temp_cleaner.py
tests/test_pilot/: test_action_executor.py  test_pilot.py  test_screenshot_provider.py
tests/test_utils/: test_admin.py  test_audio_native.py  test_windows_native.py
winboost/: __init__.py  __main__.py
winboost/actions/: __init__.py  loader.py  schema.py
winboost/actions/appearance/: actions.yaml
winboost/actions/cleanup/: actions.yaml
winboost/actions/dev_tools/: actions.yaml
winboost/actions/gaming/: actions.yaml
winboost/actions/network/: actions.yaml
winboost/actions/performance/: actions.yaml
winboost/actions/privacy/: actions.yaml
winboost/actions/security/: actions.yaml
winboost/ai/: __init__.py  action_router.py  cache.py  nl_parser.py  safety_engine.py
winboost/ai/providers/: base.py  (+4 more)
winboost/cli/: __init__.py  main.py
winboost/core/: __init__.py  backup.py  base_module.py  config.py  engine.py  executor.py  history.py
winboost/diagnose/: README.md  __init__.py  checks.py  runner.py
winboost/gui/: __init__.py  app.py  chat.py  chat_placeholder.py  dashboard.py  diagnose_page.py  history_page.py  hotkey_overlay.py  modules_page.py  onboarding.py  pilot_history_page.py  pilot_page.py  settings_page.py  theme.py
winboost/mcp/: README.md  __init__.py  __main__.py  auth.py  install.py  serializers.py  server.py
winboost/modules/: __init__.py  dev_cache_cleaner.py  disk_analyzer.py  privacy_cleaner.py  ram_optimizer.py  service_optimizer.py  startup_manager.py  system_info.py  temp_cleaner.py
winboost/pilot/: README.md  __init__.py  action_executor.py  anthropic_pilot.py  budget.py  confirmation_ui.py  sandbox.py  screenshot_provider.py
winboost/utils/: __init__.py  admin.py  audio_native.py  windows_native.py
(+7 files in other folders)
