[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winboost"
version = "2.3.0"
description = "Windows AI System Assistant — Le premier assistant Windows qui ne te ment pas."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Genlead", email = "contact@genlead.fr"},
]
keywords = ["windows", "optimizer", "system", "assistant", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "psutil>=5.9",
    "customtkinter>=5.2",
    "pyyaml>=6.0",
    "rich>=13.0",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
    "openai>=1.50",
]
mcp = [
    "fastmcp>=0.2",
]
pilot = [
    "anthropic>=0.40",
    "Pillow>=10.0",
    "pyautogui>=0.9.54",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
winboost = "winboost.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["winboost*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",   # patches mockes souvent longs, lisibilite > strict 100 cols
    "SIM117", # nested with patch(...) standard en pytest mock
    "F841",   # variables mortes parfois utiles pour debug local
]
# Modules avec listes de configs/chemins ou la lisibilite tabulaire est preferable
"winboost/modules/privacy_cleaner.py" = ["E501"]
"winboost/modules/dev_cache_cleaner.py" = ["E501"]
"winboost/modules/disk_analyzer.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["winboost"]
# La GUI (CustomTkinter) ne se teste pas raisonnablement en CI headless.
# Validation manuelle via smoke test humain — voir TODO-HUMAN.md.
omit = [
    "winboost/gui/*",
    "winboost/__main__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
